--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
+  introduction_screen: ^3.1.14
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,10 @@ flutter:
 #    - lib/images/drinks
 #    - lib/images/salads
 #    - lib/images/sides
+  assets:
+    - lib/images/
+#  - lib/images/two.png
+#  - lib/images/three.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
