--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   introduction_screen: ^3.1.14
+  http: ^1.2.2
+  flutter_stripe: ^11.0.0
 
 dev_dependencies:
   flutter_test:
+
+
+
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
