--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_stripe: ^11.0.0
   firebase_core: ^3.4.0
   firebase_auth: ^5.2.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
