--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_auth: ^5.2.0
   google_sign_in: ^6.2.1
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
