--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^5.2.0
   google_sign_in: ^6.2.1
   google_nav_bar: ^5.0.6
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
