--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   google_sign_in: ^6.2.1
   google_nav_bar: ^5.0.6
   lottie: ^3.1.2
+  shared_preferences: ^2.3.2
+
 
 dev_dependencies:
 
